--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" [routerLink]="['']">List<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['add']">Add</a>
+        <a class="nav-link" [routerLink]="['/add']">Add</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/edit']">Edit</a>
@@ -26,4 +26,4 @@
       </li>
     </ul>
   </div>
-</nav>
+</nav> 
